--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praca inżynierska demo</title>
-     <link rel="stylesheet" href="style/style.css">
- 
+    <title>Vans demo</title>
+    <link rel="stylesheet" href="style/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
-   <div id="header">
-        <H1>Demo Pracy Inżynierskiej </H1>
-   </div>
+    <div id="header">
 
-   <div id="container">
-  
-   </div>
-
-
+    </div>
+    <div id="container3d"></div> 
+    <script src="js/script.js"></script>
 </body>
 </html>
